--- a/Pages/style.css
+++ b/Pages/style.css
@@ -1,6 +1,6 @@
 body{
 font-size: 24px;
   font-family: 'Indie Flower', cursive;
-background-color: White;
-color: Red;
+background-color: Seagreen;
+color: Slategray;
 }
